platiagro/registry/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registry
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /registry/
      rewrite:
        uri: /
      route:
        - destination:
            host: $(service).$(ui-namespace).svc.$(ui-clusterDomain)
            port:
              number: 5000
      timeout: 300s
